Move linkdump to Resources page

--- a/resources.html
+++ b/resources.html
@@ -62,7 +62,16 @@
             <li><a href="https://webmastering.neocities.org/layouts" target="_blank">HTML Templates</a></li>
             <li><a href="https://emojicombos.com/" target="_blank">Emojis & ASCII Art</a></li>
             <li><a href="https://jeansgurl98.com/info" target="_blank">Jeansgurl's Links</a></li>
-            <li><a href="https://www.earthboundtext.com/" target="_blank">Earthbound Text Generator</a></li>
+            <li><a href="https://www.earthboundtext.com/" target="_blank">Earthbound Text Generator</a>, <a href="https://www.spriters-resource.com/snes/earthbound/" target="_blank">sprites</a>, and <a href="https://www.gjtorikian.com/Earthbound-Battle-Backgrounds-JS/" target="_blank">battle backgrounds</a></li>
+            <li><a href="https://status.cafe/" target="_blank">status.cafe</a></li>
+            <li>Places to get fonts, like <a href="https://fontesk.com/voxel-font/" target="_blank">Fontesk</a>, <a href="https://www.dafont.com/" target="_blank">Dafont</a>, and <a href="https://www.fontbrief.com/fontbrief" target="_blank">Fontbrief</a></li>
+        </ul><br/>
+        <p>Also, here are a couple sites I used for inspiration:</p>
+        <ul>
+          <li><a href="https://jeith.neocities.org/about" target="_blank">jeith</a></li>
+          <li><a href="https://ita.toys/" target="_blank">ita toys</a></li>
+          <li><a href="https://jeansgurl98.neocities.org/info" target="_blank">jeansgurl98</a></li>
+          <li><a href="https://cashmerecrypt.art/links/" target="_blank">Cashmere Crypt</a></li>
         </ul>
       </div>
       
