Update music and games

--- a/games.html
+++ b/games.html
@@ -27,15 +27,15 @@
       <div class="sidebarTitle">
         <p>Currently Playing</p>
       </div>
+      <div><img src="assets/games/pokemonxd.jpg"></div>
       <div><img src="assets/games/fortnite.jpg"></div>
-      <div><img src="assets/games/yakuza0.jpg"></div>
     </div>
     <div class="page">
       <div class="pageTitle">
         <p>Game Collection</p>
       </div>
       <div class="pageContent">
-        <p>Here is a list of my favorite games! They are roughly in order.</p>
+        <p>Here is a list of my favorite games! They are roughly in order. I get my cover images mostly from <a href="https://gamesdb.launchbox-app.com/games/images/6735-pokemon-xd-gale-of-darkness" target="_blank">LaunchBox</a>.</p>
       </div>
       <div class="pageGallery">
         <div>
