--- a/music.html
+++ b/music.html
@@ -27,14 +27,14 @@
       <div class="sidebarTitle">
         <p>New Discoveries</p>
       </div>
-      <div><a href="https://geordiegreep.bandcamp.com/album/the-new-sound">
-        <img src="assets/music/the_new_sound.webp">
+      <div><a href="https://bobbing.bandcamp.com/album/year-of-the-newt">
+        <img src="assets/music/bobbing.jpg">
       </a></div>
-      <div><a href="https://yumaabe.bandcamp.com/album/hotel-new-yuma">
-        <img src="assets/music/yuma.jpg">
+      <div><a href="https://open.spotify.com/album/2IC2TP7bnwkfl56vjabLQt">
+        <img src="assets/music/viagra-boys-cave-world.webp">
       </a></div>
-      <div><a href="https://open.spotify.com/album/2wkyePDEqzYoOoro3TvThK?si=BO-V3d0aQ5SoFx5tzcIvEg">
-        <img src="assets/music/nature_and_computers.jpg">
+      <div><a href="https://peachpitmusic.bandcamp.com/album/magpie">
+        <img src="assets/music/magpie.jpg">
       </a></div>
     </div>
     <div class="page">
@@ -124,16 +124,16 @@
           <p><strong> I Need to Start a Garden</strong><br>Haley Heynderickx</p>
         </div>
         <div>
-          <a href="https://vyletpony.bandcamp.com/album/cutiemarks-and-the-things-that-bind-us">
-            <img src="assets/music/cutiemarks.jpg" >
-          </a>
-          <p><strong>CUTIEMARKS</strong><br>Vylet Pony</p>
-        </div>
-        <div>
           <a href="https://needlejuice.bandcamp.com/album/spirit-phone">
             <img src="assets/music/spiritphone.jpg" >
           </a>
           <p><strong>Spirit Phone</strong><br>Lemon Demon</p>
+        </div>
+        <div>
+          <a href="https://open.spotify.com/album/4NU1Wi1CUd416Al7wUucJy?si=evZkjB2gQm6XZ7grQ0gkAA">
+            <img src="assets/music/hosonohouse.jpg" >
+          </a>
+          <p><strong>Hosono House</strong><br>Haruomi Hosono</p>
         </div>
       </div>
     </div>
