--- a/blog.html
+++ b/blog.html
@@ -28,17 +28,35 @@
         <p>Table of Contents</p>
       </div>
       <div class="sidebarContent"><strong>
+        <p><a href="#2-13-25">February 13th, 2025</a></p>
         <p><a href="#8-8-24">August 8th, 2024</a></p>
         <p><a href="#7-12-24">July 12th, 2024</a></p>
       </strong></div>
     </div>
     <div class="pageWide">
       <div class="pageTitleDual">
+        <p>Bwehhhhhhhhhhhhhhh</p>
+        <p><a id="8-8-24">February 13th, 2025</a></p>
+      </div>
+      <div class="pageContent">
+        <p>Man, I haven't updated this in months. But I recently joined this hacker space thing and figured I should work on something while I'm there, so, here we are! Anyways, my partner made me a custom Decorable DS case for my birthday, it's so awesome! We've been talking about making another game one day, this time a smaller scope. Love Decorable, but it wasn't exactly a reasonable scope for a first game. Maybe we could do a game jam or two down the road? I think I'll leave off the post here, it's difficult for me to know what to talk about on these posts, especially because there hasn't been that much happening in my life that won't doxx me. I'll try to update this website as I have more ideas, we'll see what happens! Bye for now~</p>
+      </div>
+      <div class="pageGallery">
+        <div>
+          <img src="assets/blog/decorable-front.jpg" >
+          <p>Front of the case</p>
+        </div>
+        <div>
+          <img src="assets/blog/decorable-back.jpg" >
+          <p>Back of the case</p>
+        </div>
+      </div>
+      <div class="pageTitleDual">
         <p>Neighborhood Cats</p>
         <p><a id="8-8-24">August 8th, 2024</a></p>
       </div>
       <div class="pageContent">
-        <p>Happy Vriska day! I've been going on a lot of walks lately in a neighorhood I moved into kinda recently. The weather is nice and there are some cool houses, but the best thing are the outdoor cats that I sometimes find! I used to go on walks just to touch some grass, but now I mostly do it to scout some cute cats :3 So far all of the cats I've seen have been very nice, and I can't wait to find some more! These photos below were all taken within a couple months of each other, not on the same walk (but I wish there were that many cats roaming around!).</p>
+        <p>Happy Vriska day! I've been going on a lot of walks lately in a neighborhood I moved into kinda recently. The weather is nice and there are some cool houses, but the best thing are the outdoor cats that I sometimes find! I used to go on walks just to touch some grass, but now I mostly do it to scout some cute cats :3 So far all of the cats I've seen have been very nice, and I can't wait to find some more! These photos below were all taken within a couple months of each other, not on the same walk (but I wish there were that many cats roaming around!).</p>
         <p>The first cats I took a picture of were these two stoic guys sitting on a staircase. They appreciated some pets, but mainly sat there mogging us >:3</p>
         <p>After a month passed, I went on another walk and saw this long-haired dude. He was probably the softest cat ever :D but as soon as I knelt down to pet him he started flopping and rolling on the ground, getting lots of debris in his fur, hehe. I gave him a good brush before I went on my way.</p>
         <p>On another walk with my partner (specifically to scope out cats), we saw this tuxedo who was missing their left ear. He was funny because he would walk by us for a quick pet, then sit a few steps away only to come swinging back around a few seconds later for another petting.</p>
