Add chatbox, update subpages

--- a/games.html
+++ b/games.html
@@ -27,7 +27,7 @@
       <div class="sidebarTitle">
         <p>Currently Playing</p>
       </div>
-      <div><img src="assets/games/pokemonxd.jpg"></div>
+      <div><img src="assets/games/luigismanion.jpg"></div>
       <div><img src="assets/games/fortnite.jpg"></div>
     </div>
     <div class="page">
@@ -85,10 +85,9 @@
           <p>Switch</p>
           <p>Wii U</p>
           <p>Gamecube</p>
-          <p>Nintendo 64</p>
+          <p>Nintendo 64 (broken <img class="icon" src="assets/icons/sadge.webp">)</p>
           <p>3DS</p>
           <p>DSi</p>
-          <p>DS Lite</p>
           <p>Gameboy Advance SP</p>
         </div>
     </div>
