--- a/music.html
+++ b/music.html
@@ -27,14 +27,14 @@
       <div class="sidebarTitle">
         <p>New Discoveries</p>
       </div>
-      <div><a href="https://bobbing.bandcamp.com/album/year-of-the-newt">
-        <img src="assets/music/bobbing.jpg">
+      <div><a href="https://open.spotify.com/album/3N3NdhXkyIKauv6xkoUpwE">
+        <img src="assets/music/happyend.webp">
       </a></div>
-      <div><a href="https://open.spotify.com/album/2IC2TP7bnwkfl56vjabLQt">
-        <img src="assets/music/viagra-boys-cave-world.webp">
+      <div><a href="https://open.spotify.com/album/1A84EfaPGuBdtLSEG0K0Fz">
+        <img src="assets/music/roundtable.jpg">
       </a></div>
-      <div><a href="https://peachpitmusic.bandcamp.com/album/magpie">
-        <img src="assets/music/magpie.jpg">
+      <div><a href="https://open.spotify.com/album/61w6ldkTnQNDTImaUiBoQs">
+        <img src="assets/music/pomodorosa.jpg">
       </a></div>
     </div>
     <div class="page">
@@ -100,6 +100,12 @@
           <p><strong>Ochamekan</strong><br>Serani Poji</p>
         </div>
         <div>
+          <a href="https://open.spotify.com/album/4NU1Wi1CUd416Al7wUucJy?si=evZkjB2gQm6XZ7grQ0gkAA">
+            <img src="assets/music/hosonohouse.jpg" >
+          </a>
+          <p><strong>Hosono House</strong><br>Haruomi Hosono</p>
+        </div>
+        <div>
           <a href="https://www.youtube.com/playlist?list=PLMynaxX_I0z_Ud3D7936tusb_3cszjhGC">
             <img src="assets/music/life.jpg" >
           </a>
@@ -128,12 +134,6 @@
             <img src="assets/music/spiritphone.jpg" >
           </a>
           <p><strong>Spirit Phone</strong><br>Lemon Demon</p>
-        </div>
-        <div>
-          <a href="https://open.spotify.com/album/4NU1Wi1CUd416Al7wUucJy?si=evZkjB2gQm6XZ7grQ0gkAA">
-            <img src="assets/music/hosonohouse.jpg" >
-          </a>
-          <p><strong>Hosono House</strong><br>Haruomi Hosono</p>
         </div>
       </div>
     </div>
