--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       </nav>
     </div>
     <div class="sidebar">
-      
       <div class="sidebarTitle">
         <p>Bio</p>
       </div>
@@ -73,7 +72,6 @@
       </div>
       <div class="pageContent">
         <p>Hi there, and welcome to my website! I've been looking at a ton of cool new-old style websites lately, and wanted to make my own! This is mainly a site for me to share things I like, and some computer-y projects I've done. I'll update the site over time, so feel free to check back every now and then :)</p>
-        <p>Since my website is so new, I'm not yet in any webrings. I would love to be part of the community, so feel free to add me on Discord! My username is @tenders, pls include a message that you found me from neocities!</p>
       </div>
       <div><img src="assets/mac-ad.jpg"></div>
       <div class="pageTitle">
@@ -97,8 +95,13 @@
       </div>
     </div>
     <div class="sidebar">
-      
       <div class="earthbound"><img src="assets/you-have-entered-jakeonline.gif"></div>
+      <!-- BEGIN CBOX - www.cbox.ws - v4.3 -->
+      <div id="cboxdiv" style="position: relative; margin: 0 auto; width: 232px; font-size: 0; line-height: 0;">
+        <div class="cboxList"><iframe src="https://www3.cbox.ws/box/?boxid=3545170&boxtag=tf9pBv&sec=main" marginheight="0" marginwidth="0" frameborder="0" width="100%" height="100%" scrolling="auto" allowtransparency="yes" name="cboxmain3-3545170" id="cboxmain3-3545170"></iframe></div>
+        <div class="cboxForm"><iframe src="https://www3.cbox.ws/box/?boxid=3545170&boxtag=tf9pBv&sec=form" allow="autoplay" marginheight="0" marginwidth="0" frameborder="0" width="100%" height="100%" scrolling="no" allowtransparency="yes" name="cboxform3-3545170" id="cboxform3-3545170"></iframe></div>
+      </div>
+      <!-- END CBOX -->	
       <div class="sidebarTitle">
         <p>Blinkies</p>
       </div>
@@ -120,6 +123,7 @@
         <p>Updates</p>
       </div>
       <div class="sidebarContainer">
+        <p><strong>March 20th, 2025:</strong> Added more resources & chatbox. Say hi!</p>
         <p><strong>August 8th, 2024:</strong> Added neocities landing page & updated home page.</p>
         <p><strong>August 4th, 2024:</strong> Added more resources.</p>
         <p><strong>August 3rd, 2024:</strong> Added more projects.</p>
