--- a/resources.html
+++ b/resources.html
@@ -53,6 +53,19 @@
         </ul>
       </div>
       <div class="pageTitle">
+        <p>General Links</p>
+      </div>
+      <div class="pageContent">
+        <p>Some random links from around the web that I've stumbled upon that aren't related to any other categories on here, check them out! Most of them are free, or have a free option.</p>
+        <ul>
+            <li><a href="https://unsplash.com/" target="_blank">Unsplash</a>: Free images/photos</li>
+            <li><a href="https://daisyui.com/" target="_blank">DaisyUI</a>: Tailwind CSS components</li>
+            <li><a href="https://blahaj.land/landing/" target="_blank">Blahaj Land</a>: Cool static website and file hosting :3</li>
+            <li><a href="https://cobalt.tools/" target="_blank">Cobalt</a>: On-device YouTube downloader</li>
+            <li><a href="https://www.nerdfonts.com/" target="_blank">Nerd Fonts</a>: Powerline symbols for terminal</li>
+        </ul>
+      </div>
+      <div class="pageTitle">
         <p>Website-Making Tools</p>
       </div>
       <div class="pageContent">
@@ -74,7 +87,6 @@
           <li><a href="https://cashmerecrypt.art/links/" target="_blank">Cashmere Crypt</a></li>
         </ul>
       </div>
-      
       <div class="pageTitle">
         <p>3DS Homebrew</p>
       </div>
