Add status cafe

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         <p>Bio</p>
       </div>
       <div><img src="assets/jake-mii-head.png"></div>
+      <div id="statuscafe">
+        <div id="statuscafe-username"></div>
+        <div id="statuscafe-content"></div>
+      </div>
+      <script src="https://status.cafe/current-status.js?name=jakeonline" defer></script>
       <div class="sidebarContent">
         <div class="tableItem">
           <p><strong>Name</strong></p><p>Jake</p>
