Add now playing using last.fm

--- a/music.html
+++ b/music.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="css/music.css">
   <title>jakeonline</title>
   <meta name="jakeonline" content="Jake's on the line">
+  <script src="js/last.fm.js"></script>
 </head>
 <body>
   <div class="blended_grid">
@@ -24,6 +25,10 @@
       </nav>
     </div>
     <div class="sidebar">
+      <div class="sidebarTitle">
+        <p>Now Playing</p>
+      </div>
+      <div id="listening" class="sidebarContent"></div>
       <div class="sidebarTitle">
         <p>New Discoveries</p>
       </div>
