Last FM plugin improvements

--- a/music.html
+++ b/music.html
@@ -28,7 +28,7 @@
       <div class="sidebarTitle">
         <p>Now Playing</p>
       </div>
-      <div id="listening" class="sidebarContent"></div>
+      <div id="listening" class="sidebarContent">Loading...</div>
       <div class="sidebarTitle">
         <p>New Discoveries</p>
       </div>
