--- a/games.html
+++ b/games.html
@@ -75,6 +75,7 @@
           <p><strong>Omori</strong><br>PC</p>
         </div>
       </div>
+      <div class="spacer"></div>
     </div>
     <div class="sidebar">
       <div class="sidebarTitle">
