--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         <p>My favorite thing is computers I think. I've been making stuff on here for as long as I can remember, from small games on Scratch to hardware mods on retro computers. After I bought a domain name I thought it would be fun to host my own website! As for the theming, I've lately felt very nostalgic towards early-2000's era computer design, and wanted to somehow combine that with more modern UI trends. After all, I am a sucker for rounded corners. I'm still trying to find the right fonts and styling, so it's very much a work in progress.</p>
         <p>Anyways, a bit of info about the site itself. As of right now, everything is written in HTML + CSS, mostly built from scratch (with the help of some <a href="https://goblin-heart.net/sadgrl/learn/sections/snippets" target="_blank">sadgrl code snippets</a> and StackOverflow). The backgrounds you'll see on each page are all default Mac OS 9 wallpapers. I was able to download a .png of my Mii with the help of <a href="https://jeith.neocities.org/wii-ring" target="_blank">jeith</a>, whose neocities website was a big inspiration for mine. The cursor graphic is from my game, Decorable! You should check out the project page for it :3</p>
       </div>
+      <div class="spacer"></div>
     </div>
     <div class="sidebar">
       <div class="earthbound"><img src="assets/you-have-entered-jakeonline.gif"></div>
@@ -128,6 +129,7 @@
         <p>Updates</p>
       </div>
       <div class="sidebarContainer">
+        <p><strong>March 29th, 2025:</strong> Now using markedjs for Blog, Projects, and Resources pages.</p>
         <p><strong>March 20th, 2025:</strong> Added more resources & chatbox. Say hi!</p>
         <p><strong>August 8th, 2024:</strong> Added neocities landing page & updated home page.</p>
         <p><strong>August 4th, 2024:</strong> Added more resources.</p>
