--- a/music.html
+++ b/music.html
@@ -141,6 +141,7 @@
           <p><strong>Spirit Phone</strong><br>Lemon Demon</p>
         </div>
       </div>
+      <div class="spacer"></div>
     </div>
     <div class="sidebar">
       <div class="sidebarTitle">
