--- a/resources.html
+++ b/resources.html
@@ -7,9 +7,8 @@
   <meta name="jakeonline" content="Jake's on the line">
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.1/purify.min.js"></script>
-  <script type="text/javascript" src="resources.md"></script>
   <script>
-    fetch('resources.md')
+    fetch('md/resources.md')
       .then(res => res.text())
       .then(res => document.getElementById('resources').innerHTML = DOMPurify.sanitize(marked.parse(res)))
   </script>
