--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
           <p><strong>OS</strong></p><p class="tableItem2Row">Hannah Montana Linux</p>
         </div>
       </div>
+      <div class="sidebarTitle">
+        <p>Updates</p>
+      </div>
+      <div class="sidebarContainer">
+        <p><strong>March 29th, 2025:</strong> Now using markedjs for Blog, Projects, and Resources pages.</p>
+        <p><strong>March 20th, 2025:</strong> Added more resources & chatbox. Say hi!</p>
+        <p><strong>August 8th, 2024:</strong> Added neocities landing page & updated home page.</p>
+        <p><strong>August 4th, 2024:</strong> Added more resources.</p>
+        <p><strong>August 3rd, 2024:</strong> Added more projects.</p>
+        <p><strong>July 19th, 2024:</strong> Updated domain name.</p>
+        <p><strong>July 12th, 2024:</strong> Started the website!</p>
+      </div>
     </div>
     <div class="page">
       <div class="pageTitle">
@@ -107,7 +119,13 @@
         <div class="cboxList"><iframe src="https://www3.cbox.ws/box/?boxid=3545170&boxtag=tf9pBv&sec=main" marginheight="0" marginwidth="0" frameborder="0" width="100%" height="100%" scrolling="auto" allowtransparency="yes" name="cboxmain3-3545170" id="cboxmain3-3545170"></iframe></div>
         <div class="cboxForm"><iframe src="https://www3.cbox.ws/box/?boxid=3545170&boxtag=tf9pBv&sec=form" allow="autoplay" marginheight="0" marginwidth="0" frameborder="0" width="100%" height="100%" scrolling="no" allowtransparency="yes" name="cboxform3-3545170" id="cboxform3-3545170"></iframe></div>
       </div>
-      <!-- END CBOX -->	
+      <!-- END CBOX -->
+      <div class="sidebarTitle">
+        <p>Webrings</p>
+      </div>
+      <div class="sidebarContent">
+        <iframe class="wiiRing" src="https://neocities.jeith.com/wii-webring.html?site=https://jakeonline.co&variant=standard"></iframe>
+      </div>
       <div class="sidebarTitle">
         <p>Blinkies</p>
       </div>
@@ -124,18 +142,6 @@
         <img src="assets/blinkies/sburb.webp">
         <img src="assets/blinkies/spiritphone.webp">
         <img src="assets/blinkies/bark.gif">
-      </div>
-      <div class="sidebarTitle">
-        <p>Updates</p>
-      </div>
-      <div class="sidebarContainer">
-        <p><strong>March 29th, 2025:</strong> Now using markedjs for Blog, Projects, and Resources pages.</p>
-        <p><strong>March 20th, 2025:</strong> Added more resources & chatbox. Say hi!</p>
-        <p><strong>August 8th, 2024:</strong> Added neocities landing page & updated home page.</p>
-        <p><strong>August 4th, 2024:</strong> Added more resources.</p>
-        <p><strong>August 3rd, 2024:</strong> Added more projects.</p>
-        <p><strong>July 19th, 2024:</strong> Updated domain name.</p>
-        <p><strong>July 12th, 2024:</strong> Started the website!</p>
       </div>
     </div>
   </div>
