Mealie blog post, update profile pic

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="sidebarTitle">
         <p>Bio</p>
       </div>
-      <div><img src="assets/jake-mii-head.png"></div>
+      <div><img src="assets/jake-side.png"></div>
       <div id="statuscafe">
         <div id="statuscafe-username"></div>
         <div id="statuscafe-content"></div>
@@ -74,6 +74,7 @@
         <p>Updates</p>
       </div>
       <div class="sidebarContainer">
+        <p><strong>April 23rd, 2025:</strong> Updated profile picture, added WiiRing.</p>
         <p><strong>March 29th, 2025:</strong> Now using markedjs for Blog, Projects, and Resources pages.</p>
         <p><strong>March 20th, 2025:</strong> Added more resources & chatbox. Say hi!</p>
         <p><strong>August 8th, 2024:</strong> Added neocities landing page & updated home page.</p>
