--- a/blog.html
+++ b/blog.html
@@ -35,6 +35,7 @@
         <p>Table of Contents</p>
       </div>
       <div class="sidebarContent"><strong>
+        <p><a href="#4-23-25">April 23rd, 2025</a></p>
         <p><a href="#3-29-25">March 29th, 2025</a></p>
         <p><a href="#3-13-25">March 13th, 2025</a></p>
         <p><a href="#2-13-25">February 13th, 2025</a></p>
